--- a/index.html
+++ b/index.html
@@ -88,18 +88,18 @@
       content: '';
       border-top: 5px solid rgba(0, 0, 0, 0.25);;
       margin: 0 20px 0 0;
-      flex: 1 0 500px;
+      flex: 1 0 300px;
     }
 
     h2.l:after 
     {
       margin: 0 0 0 20px;
     }
-    ul
+    ul.list
     {
     	list-style-type: none;
     }
-    ul li
+    ul.list li
     {
     	display: inline;
     	padding-right: 150px
@@ -129,7 +129,7 @@
  		<h2 class="l">
  		  Skills
  	    </h2>
- 	    <ul>
+ 	    <ul class="list">
  	    	<li><img src="https://images.all-free-download.com/images/graphiclarge/html_5_vector_logo_148263.jpg" height="70"
  	    		width="50"></li>
  	    	<li><img src="https://cdn.worldvectorlogo.com/logos/css3.svg" height="90" width="90"></li>
@@ -137,6 +137,14 @@
  	    	<li><img src="https://raw.githubusercontent.com/isocpp/logos/master/cpp_logo.png" height="90" width="70"></li>
  	    	<li><img src="https://pbs.twimg.com/profile_images/954020529391902720/jW4dnFtA.jpg" height="70" width="70"></li>
  	    	<li><img src="https://image.flaticon.com/icons/png/512/38/38002.png" height="70" width="70"></li>
+ 	    </ul>
+ 	    <p>I'm new to developing web and android applications and I'm well versed in java and C++</p>
+ 	    <h3 style="color: black;">My Goals For 2019</h3>
+ 	    <ul style="list-style-type: none;">
+ 	    	<li>Learn web development(Front and Back End)</li>
+ 	    	<li>Learn Anrdoid App Development</li>
+ 	    	<li>Participate in Competitive Coding Competitions</li>
+ 	    	<li>Learn Game Development</li>
  	    </ul>
  	  </div>
  	</section>
