--- a/index.html
+++ b/index.html
@@ -104,6 +104,15 @@
     	display: inline;
     	padding-right: 150px
     }
+    .about
+    {
+    	background-color: #d24a27;
+    	position: relative;
+    	color:#fff;
+ 		display: flex;
+ 		justify-content: space-around;
+ 		text-align: center;
+    }
  </style>
  <head>
   <link rel="icon" href="PicsArt_05-27-10.20.04.png">
@@ -123,14 +132,14 @@
  	   	<a href="https://www.instagram.com/darth_tejus/"><img src="https://image.flaticon.com/icons/png/512/87/87390.png" height="20" width="20" style="padding-top: 8;"></a>
  	   </p>
  	 </div>
- 	</div>
+ 	v>
  	<section class="skills">
  	  <div class="container">
  		<h2 class="l">
  		  Skills
  	    </h2>
  	    <ul class="list">
- 	    	<li><img src="https://images.all-free-download.com/images/graphiclarge/html_5_vector_logo_148263.jpg" height="70"
+ 	 tps://images.all-free-download.com/images/graphiclarge/html_5_vector_logo_148263.jpg" height="70"
  	    		width="50"></li>
  	    	<li><img src="https://cdn.worldvectorlogo.com/logos/css3.svg" height="90" width="90"></li>
  	    	<li><img src="https://seeklogo.com/images/J/javascript-logo-E967E87D74-seeklogo.com.png" height="90" width="70"></li>
@@ -141,12 +150,17 @@
  	    <p>I'm new to developing web and android applications and I'm well versed in java and C++</p>
  	    <h3 style="color: black;">My Goals For 2019</h3>
  	    <ul style="list-style-type: none;">
- 	    	<li>Learn web development(Front and Back End)</li>
- 	    	<li>Learn Anrdoid App Development</li>
- 	    	<li>Participate in Competitive Coding Competitions</li>
- 	    	<li>Learn Game Development</li>
+ 	    	<li style="padding-bottom: 10px;">Learn web development(Front and Back End)</li>
+ 	    	<li style="padding-bottom: 10px;">Learn Anrdoid App Development</li>
+ 	    	<li style="padding-bottom: 10px;">Participate in Competitive Coding Competitions</li>
+ 	    	<li >Learn Game Development</li>
  	    </ul>
  	  </div>
+ 	</section>
+ 	<section class="about">
+ 		<h2 class="l">
+ 		  About Me
+ 	    </h2>
  	</section>
  </body>
 </html>
