--- a/index.html
+++ b/index.html
@@ -132,14 +132,13 @@
  	   	<a href="https://www.instagram.com/darth_tejus/"><img src="https://image.flaticon.com/icons/png/512/87/87390.png" height="20" width="20" style="padding-top: 8;"></a>
  	   </p>
  	 </div>
- 	v>
  	<section class="skills">
  	  <div class="container">
  		<h2 class="l">
  		  Skills
  	    </h2>
  	    <ul class="list">
- 	 tps://images.all-free-download.com/images/graphiclarge/html_5_vector_logo_148263.jpg" height="70"
+ 	 <li><img src="https://images.all-free-download.com/images/graphiclarge/html_5_vector_logo_148263.jpg" height="70"
  	    		width="50"></li>
  	    	<li><img src="https://cdn.worldvectorlogo.com/logos/css3.svg" height="90" width="90"></li>
  	    	<li><img src="https://seeklogo.com/images/J/javascript-logo-E967E87D74-seeklogo.com.png" height="90" width="70"></li>
