--- a/index.html
+++ b/index.html
@@ -104,13 +104,14 @@
     	display: inline;
     	padding-right: 150px
     }
-    .about
+    .about-hd,.about
     {
     	background-color: #d24a27;
+    	display: inline-block;
     	position: relative;
     	color:#fff;
  		display: flex;
- 		justify-content: space-around;
+ 		justify-content: center;
  		text-align: center;
     }
  </style>
@@ -138,7 +139,7 @@
  		  Skills
  	    </h2>
  	    <ul class="list">
- 	 <li><img src="https://images.all-free-download.com/images/graphiclarge/html_5_vector_logo_148263.jpg" height="70"
+ 	    	<li><img src="https://images.all-free-download.com/images/graphiclarge/html_5_vector_logo_148263.jpg" height="70"
  	    		width="50"></li>
  	    	<li><img src="https://cdn.worldvectorlogo.com/logos/css3.svg" height="90" width="90"></li>
  	    	<li><img src="https://seeklogo.com/images/J/javascript-logo-E967E87D74-seeklogo.com.png" height="90" width="70"></li>
@@ -156,10 +157,11 @@
  	    </ul>
  	  </div>
  	</section>
- 	<section class="about">
- 		<h2 class="l">
- 		  About Me
- 	    </h2>
- 	</section>
+ 	<div class="about-hd">
+ 		<h2 class="l">About Me</h2>
+ 	</div>
+ 	<div class="about">
+ 		<h1>Hi,I'm Tejus and I like Hawaiian Pizza</h1>
+ 	</div>
  </body>
 </html>
